# aggregator

./: Aggregator.hs  Configuration.hs  Data.hs  Feeds.hs  Fetcher.hs  Html.hs  LICENSE  README.md  build_static.sh  cabal.project.freeze  config  server.cabal  stack.yaml
