name:                server
version:             0.1.0.0
synopsis:            RSS aggregator backend
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Paul Brauner
maintainer:          polux2001@gmail.com
copyright:           Paul Brauner
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable server
  main-is:            Aggregator.hs 
  -- other-modules:       
  build-depends:        base ==4.6.*
                      , yesod ==1.2.*
                      , persistent ==1.2.*
                      , persistent-sqlite ==1.2.*
                      , persistent-template ==1.2.*
                      , transformers ==0.3.*
                      , resourcet ==0.4.*
                      , feed ==0.3.*
                      , HTTP ==4000.*
                      , aeson ==0.6.*
                      , time ==1.4.*
                      , timerep ==1.0.*
                      , safe ==0.3.*
                      , text ==0.11.*
                      , path-pieces ==0.1.*
                      , tagsoup ==0.12.*
                      , xml ==1.3.*
                      , utf8-string ==0.3.*
                      , network ==2.4.*
                      , bytestring ==0.10.*
  
