name:                server
version:             0.1.0.0
synopsis:            RSS aggregator backend
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Paul Brauner
maintainer:          polux2001@gmail.com
copyright:           Paul Brauner
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable server
  main-is:            Aggregator.hs 
  other-modules:      Configuration, Data, Feeds, Fetcher, Html
   
  build-depends:        base
                      , yesod
                      , persistent
                      , persistent-sqlite
                      , persistent-template
                      , transformers
                      , resourcet
                      , feed
                      , aeson
                      , time
                      , timerep
                      , safe
                      , text
                      , path-pieces
                      , tagsoup
                      , xml
                      , utf8-string
                      , network
                      , bytestring
                      , network-uri
                      , http-conduit
                      , http-types
                      , mtl
                      , unexceptionalio
                      , warp
                      , wai-cors
                      , monad-logger
                      , async
